--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "ed-grid": "^3.0.2",
     "edteam-style-guides": "^0.0.91",
     "prop-types": "^15.8.1",
